--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit",
     "build:extension": "node scripts/build-extension.js",
     "build:all": "npm run build && npm run build:extension"
   },
