--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "build:all": "npm run build && npm run build:extension"
   },
   "dependencies": {
+    "i18next": "^25.3.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-i18next": "^15.5.3",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.0.8",
